# evolutionary-tax-strategies-sez

./: .gitignore  LICENSE  README.md  ga_gui_min.py  main.py  pyproject.toml  pytest_output.txt  requirements.txt  setup.py  tree.py
Experiment_Pipeline/: chart_of_accounts.yaml
docs/: experiments.md
exp_output/: draft_results.ipynb
notebooks/: GA_Audit_Explorer_v2 copy.ipynb  Graphs_plots_for_tests.ipynb  Graphs_prop.ipynb
output/: coevolution_results.csv  coevolution_results_6_node_nested_graph_env_1_20251007.csv  coevolution_results_6_node_nested_graph_env_1_20251007_standard.csv  coevolution_results_6_node_nested_graph_env_1_20251008_alternative.csv  coevolution_results_6_node_nested_graph_env_1_20251008_standard.csv
paper_results/: README.md
raw_experimental_data/: Process_raw_dataset.ipynb
src/: config_paths.py
tests/: ga_equivclass_selector_tail.py.py  genetic_algorithm.py  genetic_algorithm_partition.py  smoke_test_ga.py  test_Economy_GUI2.py  test_account.py  test_accounting_entry.py  test_accounting_entry_prop.py  test_agent_accountant.py  test_agent_context.ipynb  test_chart_of_accounts.py  test_economy.ipynb  test_economy.py  test_economy_GUI.py  test_get_cost_strict.py  test_global_accountant.py  test_global_accountant_integration.py  test_income_statement.py  test_ledger.py  test_order_classifier.py  test_order_utils.ipynb  test_planner.ipynb  test_planner_2.py  test_policy_trace.py  test_production_graph_test.ipynb  test_production_process.ipynb  test_sign_probe.py  test_transaction_classification.py  test_validate_prefix_invariance.py
(+12621 files in other folders)
