[project]
name = "evolutionary-tax-strategies-sez"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deap>=1.4.3",
    "hypothesis>=6.141.1",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pipreqs>=0.5.0",
    "pyswarms>=1.3.0",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "scipy>=1.13.1",
]

[project.scripts]
run-benchmark = "src.experiment.run_experiment:main"
run-finetuning = "src.fine_tuning.scripts.run_all:main"
